<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PanStoryApp</string>
    <string name="storydescription">Description</string>
    <string name="storyname">Username</string>
    <string name="storyprofile">Profile</string>
    <string name="welcomelogin">Welcome to Pan Story App</string>
    <string name="emailcolumn">Email</string>
    <string name="passwordcolumn">Password</string>
    <string name="loginbutton">Login</string>
    <string name="havent_acc">"Don't worry if you're not have an account, register here "</string>
    <string name="registrationform">Registration Form</string>
    <string name="namecolumn">Name</string>
    <string name="registbutton">Regist</string>
    <string name="have_acc">Already Have an Account? Login Here</string>
    <string name="btncamerax">CameraX</string>
    <string name="imagepreview" tools:ignore="ExtraTranslation">Image</string>
    <string name="gallerybtn">Gallery</string>
    <string name="btnupload">Upload</string>
    <string name="camera_switch">Switch Camera</string>
    <string name="login_granted">Now You\'re Loged In</string>
    <string name="language_feature">Language</string>
    <string name="logout_feature">Logout</string>
    <string name="add_feature">Add</string>
    <string name="permission_failed">Please Give Permission First</string>
    <string name="fill_required">Fill Required</string>
    <string name="select_pitcure">Select Your Pitcure</string>
    <string name="retrofit_failure">Retrofit Failure</string>
    <string name="choose_image">Choose Image</string>
    <string name="pitcure_fail">Failed To Take Pitcure</string>
    <string name="camera_failed_open">Failed To Open Camera</string>
    <string name="hint_email">email@email.com</string>
    <string name="validation_email">Please Fill with Valid Email Format</string>
    <string name="hint_name">yourname</string>
    <string name="hint_password">yourpassword</string>
    <string name="PanStory">Pan Story App</string>
    <string name="appjargon">Share Your Dreams Share Your Stories</string>
    <string name="panstoryapplogo">panstoryapplogo</string>
    <string name="google_map_feature">Google Maps</string>
    <string name="failed_style">Failed to Parsing Style</string>
    <string name="normal_type_map">Normal Type</string>
    <string name="satellite_type_map">Satellite Map</string>
    <string name="terrain_type_map">Terrain Map</string>
    <string name="logoloading">Please Wait.......</string>
    <string name="login_failed">Login Failed, Please Try Again</string>
    <string name="upload_story_failed">Gagal Mengupload Story</string>
    <string name="upload_story_success">Berhasil Upload Story</string>
    <string name="retry_loading">Try Again</string>
    <string name="register_failed">Register Failed, Try Again</string>
    <string name="hybrid_type_map">Hybrid Map</string>
    <string name="setting_feature">Pengaturan</string>
</resources>