<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".appuserinterface.appactivity.AppAddStoryActivity">

    <ImageView
        android:id="@+id/iv_addstorypreview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="10dp"
        android:padding="7dp"
        app:layout_constraintBottom_toTopOf="@+id/bt_camerax"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_camerax"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="18dp"
        android:scaleType="fitCenter"
        android:text="@string/btncamerax"
        app:layout_constraintBottom_toTopOf="@+id/textinput_layout"
        app:layout_constraintEnd_toStartOf="@+id/bt_gallery"
        app:layout_constraintStart_toStartOf="@+id/iv_addstorypreview"
        app:layout_constraintTop_toBottomOf="@+id/iv_addstorypreview" />

    <Button
        android:id="@+id/bt_gallery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/gallerybtn"
        app:layout_constraintBottom_toBottomOf="@+id/bt_camerax"
        app:layout_constraintEnd_toEndOf="@+id/iv_addstorypreview"
        app:layout_constraintStart_toEndOf="@+id/bt_camerax"
        app:layout_constraintTop_toTopOf="@+id/bt_camerax" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textinput_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        app:layout_constraintEnd_toEndOf="@id/iv_addstorypreview"
        app:layout_constraintStart_toStartOf="@+id/iv_addstorypreview"
        android:hint="@string/storydescription"
        app:layout_constraintTop_toBottomOf="@id/bt_camerax">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="@+id/camerax_button"
            app:layout_constraintTop_toBottomOf="@id/camerax_button" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bt_upload"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btnupload"
        android:maxLines="@integer/material_motion_duration_medium_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textinput_layout"
        app:layout_constraintStart_toStartOf="@+id/textinput_layout"
        app:layout_constraintTop_toBottomOf="@id/textinput_layout" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>